--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Section 1: Header -->
     <nav class="navbar navbar-expand-lg ">
         <div class="container ">
-            <a class="navbar-logo" href="#"><img src="plaza home page images/plaza logo.jpg" alt="Logo" height="130"></a>
+            <a class="navbar-logo" href="#"><img src="plaza home page images/plaza logo.jpg" alt="Logo" height="100"></a>
             
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto ">
@@ -53,7 +53,7 @@
         <div class="header-background"></div>
         <div class="header-content">
             <h1>TASTE PERFECTION <br>GUARANTEED</h1>
-            <p class="mt-4">Experience Happiest Moments with Best Catering <br>Services in Kerala</p>
+            <p class="mt-4">Experience Happiest Moments  <br>with Best Catering Services in Kerala</p>
             <button class="btn contact-us-btn text-center">Contact Us</button>
             <h2 class="experience-info  "> <br> 21+ </br>Years of Experience</h2>
             <h3 class="experience-info py-5 px-5"> <br> 100+ </br>Events Each year</h3>
@@ -111,7 +111,7 @@
                         </span></h2>
                 </div>
                 <div class="col-md-6 position-relative">
-                    <img src="plaza home page images/festive-dinner-table-decorated-white-green-tones.jpg" class="blurred-image" alt="Image 1">
+                    <img src="plaza home page images/people-taking-part-high-protocol-event.jpg" class="blurred-image" alt="Image 1">
                     <img src="plaza home page images/drinks-2578446_1280 (1).jpg" class="overlay-image" alt="Image 1">
                     <h1 class="image-title">Wedding</h1>
                     <div class="circle"></div>
@@ -122,7 +122,7 @@
             </div>
             <div class="row mt-4">
                 <div class="col-md-6 position-relative">
-                    <img src="plaza home page images/3.jpeg" class="blurred-image" alt="Image 1">
+                    <img src="plaza home page images/people-taking-part-high-protocol-event.jpg" class="blurred-image" alt="Image 1">
                     <img src="plaza home page images/tablecloth-3336687_1280 (1).jpg" class="overlay-image" alt="Image 1">
                     <h1 class="image-title">Social Events</h1>
                     <div class="circle"></div>
@@ -239,56 +239,56 @@ your loved ones.</p>
 
     <section class="section-7">
         <div class="container py-5 px-5">
-            <h2 class="text-center">Our Guests</h2>
-            <div class="row py-5 px-5">
-              <div class="col-md-3 text-center">
+            <h2 class=" guest-heading text-center">Our Guests</h2>
+            <div class="row ">
+              <div class="guest-photo col-md-3 col-6 text-center">
                 <img src="plaza home page images/Abdul Nabeel K.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                 <div class="guest-name">Abdul Nabeel K
                     MD - Arabian Garden
                     Restaurant Ltd</div>
               </div>
               
-              <div class="col-md-3 text-center">
+              <div class=" guest-photo col-md-3 col-6 text-center">
                 <img src="plaza home page images/Abdul Nasser K.jpg" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                 <div class="guest-name">Abdul Nasser K
                     Entrepreneur - Al
                     Karama Group</div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class="guest-photo col-md-3 col-6 text-center">
                 <img src="plaza home page images/Aydrose Rasheed Puthussery.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                 <div class="guest-name">Aydrose Rasheed
                     Puthussery
                     Director - Relief
                     Medical Solutions</div>
               </div>
-              <div class="col-md-3 text-center">
+              <div class=" guest-photo col-md-3 col-6 text-center">
                 <img src="plaza home page images/Basheer KV.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                 <div class="guest-name">Basheer KV
                     Chairman - Ansari
                     Convention Center</div>
               </div>
             </div>
-            <div class="row py-5 px-5">
-                <div class="col-md-3 text-center">
+            <div class="row ">
+                <div class="guest-photo col-md-3 col-6 text-center">
                     <img src="plaza home page images/Hassan Kunhi.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                     <div class="guest-name">Methale Purayil
                         Hassan Kunhi
                         Director -
                         Asset Homes</div>
                   </div>
-                  <div class="col-md-3 text-center">
+                  <div class="guest-photo col-md-3 col-6 text-center">
                     <img src="plaza home page images/IbrahimThonnikara.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                     <div class="guest-name">Ibrahim Thonikkara
                         MD - Ajzala
                         Super Market</div>
                   </div>
-                  <div class="col-md-3 text-center">
+                  <div class="guest-photo col-md-3  col-6 text-center">
                     <img src="plaza home page images/Malabar.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                     <div class="guest-name">Malabar Gold and
                         Diamonds
                         Company</div>
                   </div>
-                  <div class="col-md-3 text-center">
+                  <div class="guest-photo col-md-3 col-6 text-center">
                     <img src="plaza home page images/SreeVishnumayaSwamiTemple.png" class="img-fluid guest-img w-75 h-auto" alt="Guest 1">
                     <div class="guest-name">Avanangattil Kalari
                         Sree Vishnumaya
@@ -327,8 +327,12 @@ your loved ones.</p>
                     </div>
                 </div>
                 <div class="col-md-3 blog-text">
-                    <h5>Best Corporate Catering Service In Kerala 2024</h5>
-                    <p>Stress-Free Catering. Flawless Events Best Corporate Catering Service In Kerala 2024...</p>
+                    <h5>Best Indoor Catering
+                        Services Kerala
+                        Plaza Catering</h5>
+                    <p>Are you looking for an Outdoor
+                        catering Services that can
+                        provide delicious…</p>
                     <div class="read-more">
                         <a href="#">Read More<span class="material-symbols-outlined">
                             arrow_right
@@ -336,8 +340,12 @@ your loved ones.</p>
                     </div>
                 </div>
                 <div class="col-md-3 blog-text">
-                    <h5>Best Corporate Catering Service In Kerala 2024</h5>
-                    <p>Stress-Free Catering. Flawless Events Best Corporate Catering Service In Kerala 2024...</p>
+                    <h5>How to choose outdoor
+                        catering services in
+                        2024?</h5>
+                    <p>Are you looking for an Outdoor
+                        catering Services that can
+                        provide delicious…</p>
                     <div class="read-more">
                         <a href="#">Read More<span class="material-symbols-outlined">
                             arrow_right
