--- a/index.html
+++ b/index.html
@@ -357,32 +357,31 @@ your loved ones.</p>
 
     </section>
     <footer class="footer">
-        <div class="company-logo"> </div>
-            <img src="plaza home page images/plaza logo.jpg" alt="Logo" height="130"> 
+        <div class="company-logo">
+            <img src="plaza home page images/plaza logo.jpg" alt="Logo" height="130">
+        </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class=" col-md-3 col-3">
                     <h5>Find Us</h5>
                     <p>Palakkad - Ponnani Rd Vaniyamkulam-I Palakkad Dist. Kerala - 679 523</p>
                 </div>
-                <div class="col-md-3">
+                <div class=" col-md-3 col-3">
                     <h5>Contact Us</h5>
-                    <p>+919539100000 <br> +919846301234</p>
+                    <p>+919539100000<br>+919846301234</p>
                 </div>
-                <div class="col-md-3">
+                <div class=" col-md-3 col-3">
                     <h5>Explore</h5>
-                    <p>About us   <br> Menus  <br> Gallery  <br> Blog <br> Contact</p>
+                    <p>About us<br>Menus<br>Gallery<br>Blog<br>Contact</p>
                 </div>
-                <div class="col-md-3">
+                <div class=" col-md-3 col-3">
                     <h5>Events</h5>
-                    <p>Corporate<br>  Wedding <br>  Social Events <br>  Parties</p>
-                </div>
-                
-
+                    <p>Corporate<br>Wedding<br>Social Events<br>Parties</p>
                 </div>
             </div>
         </div>
     </footer>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
