media query edited

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <!-- Section 2: Paragraph with Heading -->
     <section class="section-2">
         <div class="container">
-            <img src="plaza home page images/food-4936949_1280-removebg-preview.png" class="img-fluid" alt="Image 1">
+            <img src="plaza home page images/food-4936949_1280-removebg-preview.png" class="img" alt="Image 1">
             <h2 class="section-heading">Art of Fine Dining</h2>
             <p class="section-paragraph">Welcome to Plaza Catering, your gateway to the best catering services in Kerala.
                 with a reputation for excellence in catering in Kerala, we specialize in elevating
